--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 .box {
     background: #3498db;
     color: aliceblue !important;
@@ -5,12 +9,9 @@
 }
 
 #map {
-    height: 400px;
+    height: 800px;
     width: 100%;
-}
-
-.topbar {
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .bg-blue {
@@ -25,14 +26,20 @@
 .sidenav {
     height: 100%;
     width: 0;
-    position: fixed;
-    z-index: 1;
+    position: relative;
+    z-index: 1000;
     top: 0;
     left: 0;
     background-color: #2c3e50;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+}
+
+.sidebar-container {
+    display: flex;
+    height: 100%;
+    /* flex-wrap: nowrap; */
 }
 
 .sidenav a {
@@ -72,5 +79,9 @@
 @media (max-width: 400px) {
     .responsive-text {
         font-size: 16px;
+    }
+    .sidenav {
+        position: absolute;
+        height: 100%;
     }
 }
