--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,7 +8,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <script src="{% static 'app.js' %}">
     </script>
@@ -16,7 +17,13 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-light bg-blue topbar">
+    <nav style="" class="navbar navbar-light bg-blue topbar">
+
+
+        <span class="responsive-text burger-menu" onclick="openNav()">&#9776; Autonomous Railways Monitoring Robot</span>
+
+    </nav>
+    <div class="sidebar-container">
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#">Maps</a>
@@ -24,15 +31,14 @@
             <a href="#">Report</a>
             <a href="#">Logout</a>
         </div>
-
-        <span class="responsive-text burger-menu" onclick="openNav()">&#9776; Autonomous Railways Monitoring Robot</span>
-
-    </nav>
-
-
-    <div class="container-fluid">
-        {% block content %} {% endblock %}
+        <div class="container-fluid">
+            <div class="container-fluid">
+                {% block content %} {% endblock %}
+            </div>
+        </div>
+        
     </div>
+
 </body>
 
 </html>
