--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -10,12 +10,28 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'style.css' %}">
-    <script src="{% static 'app.js' %}">
+
     </script>
     <title>MAPS</title>
+
 </head>
 
 <body>
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyC5rT7DmUVrs-dlECDMXBcfMKfE7ItHRZI",
+            authDomain: "maps-1ca28.firebaseapp.com",
+            databaseURL: "https://maps-1ca28.firebaseio.com",
+            projectId: "maps-1ca28",
+            storageBucket: "maps-1ca28.appspot.com",
+            messagingSenderId: "43370329320"
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script src="{% static 'app.js' %}"></script>
+
     <nav class="navbar sticky-top navbar-light bg-blue topbar">
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
