--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,3 @@
-html, body {
-    height: 100%;
-}
-
 .box {
     background: #3498db;
     color: aliceblue !important;
@@ -20,13 +16,17 @@ html, body {
 }
 
 .burger-menu {
-    cursor: pointer
+    cursor: pointer;
+}
+
+.sidebar-space {
+    transition: all 0.5s;
 }
 
 .sidenav {
     height: 100%;
     width: 0;
-    position: relative;
+    position: fixed;
     z-index: 1000;
     top: 0;
     left: 0;
@@ -39,7 +39,6 @@ html, body {
 .sidebar-container {
     display: flex;
     height: 100%;
-    /* flex-wrap: nowrap; */
 }
 
 .sidenav a {
@@ -55,7 +54,7 @@ html, body {
     color: #2980b9;
 }
 
-.sidenav .closebtn {
+.sidenav a.closebtn {
     position: absolute;
     top: 0;
     right: 25px;
@@ -80,8 +79,11 @@ html, body {
     .responsive-text {
         font-size: 16px;
     }
+    .sidebar-space {
+        display: none;
+    }
+
     .sidenav {
-        position: absolute;
         height: 100%;
     }
 }
