--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,13 +8,11 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/fontawesome-all.min.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
-
-    </script>
     <title>MAPS</title>
-
 </head>
 
 <body>
@@ -32,29 +30,25 @@
         firebase.initializeApp(config);
     </script>
     <script src="{% static 'app.js' %}"></script>
-
     <nav class="navbar sticky-top navbar-light bg-blue topbar">
-
-
-        <span class="responsive-text burger-menu" onclick="openNav()">&#9776; Autonomous Railways Monitoring Robot</span>
-
-    </nav>
-    <div class="sidebar-container">
         <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a style="float: right" href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
             <a href="#">Maps</a>
             <a href="#">Streaming</a>
-            <a href="#">Report</a>
+            <a href="">Report</a>
             <a href="#">Logout</a>
         </div>
+        <span class="responsive-text burger-menu" onclick="toggleNav()">&#9776; Autonomous Railways Monitoring Robot</span>
+    </nav>
+    <div class="sidebar-container">
+        <div id="mySidenavSpacer" class="sidebar-space"></div>
         <div class="container-fluid">
             <div class="container-fluid">
                 {% block content %} {% endblock %}
             </div>
         </div>
-        
+
     </div>
 
 </body>
-
 </html>
