--- a/templates/checkreport.html
+++ b/templates/checkreport.html
@@ -4,4 +4,12 @@
 <h3> Task : {{report}} </h3>
 <p>Location : {{lat}}. {{lng}}</p>
 
-<p> Date : {{time}} </p><br> {% endfor %} {% endblock %}
+<p> Date : {{time}} </p><br> {% endfor %}
+
+<ol id="list">
+
+</ol>
+
+<button onclick="addLi()">
+    add
+</button> {% endblock %}
