--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/fontawesome-all.min.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
-    <title>MAPS</title>
+    <title>Autonomous Monitoring Railways Robot</title>
 </head>
 
 <body>
@@ -33,10 +33,11 @@
         <span class="responsive-text burger-menu" onclick="toggleNav()">&#9776; Autonomous Railways Monitoring Robot</span>
         <div id="mySidenav" class="sidenav">
             <a style="float: right" href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
+            <a href="{% url 'route' %}">Route</a>
             <a href="{% url 'home' %}">Maps</a>
             <a href="{% url 'stream' %}">Streaming</a>
-            <a href="{% url 'checkreport' %}">Report</a>
-            <a href="{% url 'archive' %}">Archive</a>
+            <a href="{% url 'checkreport' %}">Reports</a>
+            <a href="{% url 'archive' %}">Archives</a>
             <a href="#">Logout</a>
         </div>
     </nav>
