--- a/templates/stream.html
+++ b/templates/stream.html
@@ -1,5 +1,2 @@
 {% extends 'base_layout.html' %} {% block content %}
-<iframe width="100%" height="600px"
-src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1">
-</iframe>
-{% endblock %}
+<iframe width="100%" height="600" src="https://www.youtube.com/embed/S0eV62vEyRs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>{% endblock %}
