--- a/templates/stream.html
+++ b/templates/stream.html
@@ -1,2 +1,2 @@
 {% extends 'base_layout.html' %} {% block content %}
-<iframe width="100%" height="600" src="https://www.youtube.com/watch?v=LNT6y7jFhY8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>{% endblock %}
+<iframe width="1200" height="600" src="https://www.youtube.com/embed/LNT6y7jFhY8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>{% endblock %}
