--- a/templates/checkreport.html
+++ b/templates/checkreport.html
@@ -1,29 +1,39 @@
 {% extends 'base_layout.html' %} {% block content %}
-<h2>Reports</h2>
-<button style="position: fixed; z-index: 10000000; top: 70px; right: 50px;" class="btn btn-default" onClick="window.location.reload()"><i class="fa fa-redo" ></i></button>
-<table class="table">
-    <thead>
-        <tr>
-            <th>No</th>
-            <th>Date</th>
-            <th>Langitude/Lotitude</th>
-            <th>Description</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for counter,time,report,lat,lng in reports %}
-        <tr>
-            <td> {{counter}} </td>
-            <td> {{time}} </td>
-            <td> {{lat}}. {{lng}}</td>
-            <td> {{report}} </td>
-            <td>
-                <button href="#" class="btn btn-danger" onclick="location.href='https://www.google.com/maps/dir//{{lat}},{{lng}}/';"><i class="fa fa-map-marker-alt"></i></button>
-                <button href="#" class="btn btn-primary" onclick="archive('{{time}}')"><i class="fa fa-archive"></i></button>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="container-fluid">
+    <div class="row mr-3">
+        <div class="col-md-12">
+            <h2>Reports</h2>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-md-12">
+            <button style="position: fixed; z-index: 10000000; top: 70px; right: 50px;" class="btn btn-default" onClick="window.location.reload()"><i class="fa fa-redo" ></i></button>
+            <table class="table table-hover table-responsive">
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>Date</th>
+                        <th>Langitude/Lotitude</th>
+                        <th>Description</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for counter,time,report,lat,lng in reports %}
+                    <tr>
+                        <td> {{counter}} </td>
+                        <td> {{time}} </td>
+                        <td> {{lat}}. {{lng}}</td>
+                        <td> {{report}} </td>
+                        <td>
+                            <button href="#" class="btn btn-danger" onclick="location.href='https://www.google.com/maps/dir//{{lat}},{{lng}}/';"><i class="fa fa-map-marker-alt"></i></button>
+                            <button href="#" class="btn btn-primary" onclick="archive('{{time}}')"><i class="fa fa-archive"></i></button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
