add views archives

--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,6 +1,8 @@
 {% extends 'base_layout.html' %} {% block content %}
 <h2>Archives</h2>
-<button style="position: fixed; z-index: 10000000; top: 70px; right: 50px;" class="btn btn-default" onClick="window.location.reload()"><i class="fa fa-redo" ></i></button>
+<button style="position: fixed; z-index: 10000000; top: 70px; right: 50px;" class="btn btn-default" onClick="window.location.reload()">
+    <i class="fa fa-redo"></i>
+</button>
 <table class="table">
     <thead>
         <tr>
@@ -12,14 +14,13 @@
         </tr>
     </thead>
     <tbody>
-        {% comment %} {% for i in reports %}
+        {% for counter,time,report,lat,lng in reports %}
         <tr>
-            <td> {{reports[i].count}}</td>
-
-            <td> {{reports[i].damage}} </td>
-            <td> {{reports[i]}}. {{lng}}</td>
+            <th scope="row"> {{counter}} </th>
+            <td> {{time}} </td>
+            <td> {{lat}}. {{lng}}</td>
             <td> {{report}} </td>
-        </tr> {% endfor %} {% endcomment %}
+        </tr> {% endfor %}
     </tbody>
 </table>
 {% endblock %}
