Video and map responsiveness

--- a/templates/stream.html
+++ b/templates/stream.html
@@ -1,2 +1,3 @@
 {% extends 'base_layout.html' %} {% block content %}
-<iframe width="1200" height="600" src="https://www.youtube.com/embed/LNT6y7jFhY8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>{% endblock %}
+<iframe style="width: 100vw; max-width: 100%; height: 56.25vw;" src="https://www.youtube.com/embed/LNT6y7jFhY8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+{% endblock %}
